# python-flask-developer-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: app.py  db.py
page_analyzer/scripts/: build.sh
page_analyzer/templates/: index.html  url.html  urls.html
